--- a/src/components/MeetTheBrothers/MeetTheBrothers.css
+++ b/src/components/MeetTheBrothers/MeetTheBrothers.css
@@ -9,6 +9,7 @@
     text-transform: uppercase;
     background-color: #ffffff;
     color: #252525;
+    overflow-x: hidden; /* Add this line to prevent horizontal scrolling */
 }
 
 .meet-the-brothers-hero {
